fix(vcr): harden cassette metadata and signatures